aesthetic tweaks and add email contact

--- a/about.html
+++ b/about.html
@@ -14,47 +14,38 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option">About</li>
-      <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-      <li class="nav-option"><a href="./contact.html">Contact</a></li>
+      <li class="nav-option">ABOUT</li>
+      <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+      <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="about-wrapper">
     <section class="about-main-text">
-      <h1>I'm a designer and deep thinker.</h1>
-      <p class="heading">Driven to create meaningful experiences, I can code, research, draw, write, present, communicate and design.</p></br>
-      <img src="./imgs/profile-drawing.png" alt="" class="about-drawing">
-      <h1>My approach to designing and making is:</h1>
+      <img src="./imgs/profile-drawing.gif" alt="" class="about-drawing">
+      <!-- <h1>I'm a designer and deep thinker.</h1>
+      <p class="heading">Driven to create meaningful experiences, I can code, research, draw, write, present, communicate and design.</p></br> -->
+      <h1>My interpretation of User eXperience design is</h1>
       <ul class="my-approach-list">
-        <h3><li>User-centred.</li></h3>
-        <dl>Every stage in the design process is informed by the needs or wants of the customer or "user".</dl>
+        <h3><li>User-centred (of course).</li></h3>
+        <dl>Every stage in the design process is informed by the needs or wants of the customer/"user"/human who interacts with your product.</dl>
         <h3><li>Empirical and agile.</li></h3>
-        <dl>I do not make assumptions about how the user sees or experiences the world; I hypothesise and I investigate. I strongly believe in the value of obtaining user feedback, then having the agility to incorporate learnings as efficiently and effectively
-          as possible.</dl>
-        <h3><li>Artistic and forward-thinking.</li></h3>
+        <dl>I do not make assumptions about how the user sees or experiences the world; I hypothesise and I investigate. I strongly believe in the value of obtaining feedback and making observations via testing, then having the agility to incorporate learnings as efficiently and effectively
+          as possible, within the iterative design process.</dl>
+        <h3><li>Beautifully intuitive.</li></h3>
         <dl>A self-taught coder and artist at heart, I am able to respond intelligently and sensitively to both technological and aesthetic requirements.</dl>
         <h3><li>Holistic and empathetic.</li></h3>
-        <dl>I think about design in terms of crafting a dynamic experience, rather than a static thing, syncing with the user's lifestyle, thoughts, feelings, and sensations. My ultimate aim is to create something that resonates with the user's identity,
-          and the way they perceive or experience the world.</br>
+        <dl>I think about design in terms of crafting a dynamic experience, rather than a static thing, syncing with the user's lifestyle, thoughts, feelings, and sensations. My ultimate aim is to help create something that seamlessly resonates with their identity,
+          and the way they perceive or experience the world, perhaps sparking a moment of joy.</br>
       </ul>
 
-    <div id="orgs">
-      <h1>Organisations I've worked with include:</h1>
-      <img src="./imgs/logos-anna.png" alt="Anna Freud Centre" class="partner-logo">
-      <img src="./imgs/logos-fac.png" alt="Founders & Coders logo" class="partner-logo">
-      <img src="./imgs/logos-nhs.png" alt="NHS NW London logo" class="partner-logo">
-      <img src="./imgs/logos-israel.png" alt="Brit Embassy and Israel Tech Hub" class="partner-logo">
-      <img src="./imgs/logos-uca.png" alt="University for Creative Arts" class="partner-logo">
-      <img src="./imgs/logos-stopmycraving.png" alt="stopmycraving logo" class="partner-logo">
-    </div>
+      <img src="./imgs/ux-process.png" alt="my ux process" class="about-drawing">
 
       <h1>My Story</h1>
 
       <img src="./imgs/my-story.png" alt="" class="about-drawing">
 
-      <p>Always learning, I apply a "can do" attitude to digital media. Alongside freelancing, I have lectured on Interaction and Interface Design at the University for Creative Arts.</p>
-      <p>In addition to UX, I am passionate about yoga, teaching hot Vinyasa Flow on Thursdays and Sundays in Hackney. Having studied French, Spanish and Philosophy at University, I am trilingual and love cross-culturally studying human nature. I am fascinated by: feminist film culture, tech for good, psychological and philosophical theories of embodiment and extended cognition.</p>
+      <p>Well-travelled and trilingual (FR, ES, ENG), I am a constant learner with a "can do" wilfulness. Alongside design, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach yoga in Hackney, on Thursdays and Sundays.</p>
 
       <!--I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
       <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.</p>-->
@@ -70,6 +61,7 @@
 
         <h1>Publications</h1>
         <p>I write on a semi-professional basis, using journalism as an exploratory tool.</p>
+
         <ul>
           <li class="heading">How to live mindfully, every day.</li></br>
           <dl>
