--- a/arabin.html
+++ b/arabin.html
@@ -13,9 +13,9 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">About</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
@@ -27,11 +27,20 @@
       <img src="./imgs/arabin-mobile-about.png" alt="" class="project-img">
       <img src="./imgs/arabin-mobile-contact.png" alt="" class="project-img">
     </div>
+    <h2>Client</h2>
+    <p>British Embassy in Israel in collaboration with Founders and Coders, Nazareth.</p>
+    <h2>Brief</h2>
+    <p>Design a platform for promoting startups with Palestinian/Arab Founders.</p>
+    <h2>Deliverables</h2>
+    <p>UX report and wireframes for a new platform.</p>
+    <h2>Description/Process</h2>
     <p>Arab Innovators is a platform for promoting startups with Palestinian/Arab Founders. The project was commissioned by the British Embassy and developed at Founders and Coders.</p>
     <p>Just 2% of startups in Israel are run by Arab/Palestinian people, even though they represent 20% of the population. From <a href="https://github.com/UKITH/Arabs-Startups/blob/UX/UX-research.md" target="_blank">my research</a>, I deduced that this is due to a range of factors: discrimination, cultural norms, and geography all play a part.</p>
     <p>Arab Innovators aims to increase the visibility of Arab entrepreneurs in the eyes of investors, with an Events and News page that champion success stories.</p>
     <p>The aim is to create a sense of community, while showcasing talented role models. In further iterations I would like to supplement this with a newsfeed on the landing page and more of a social media presence.</p>
-    <p>At the moment, the team and product owner are still adding to their initial database of startups and collecting feedback from their network of startups and investors.</p>
+    <h2>Outcomes</h2>
+    <p>At the moment, the team and product owner are still adding to their initial database of startups and collecting feedback from their network of techpreneurs and investors.</p>
+    <p>Arab Innovators is part of a wider move towards inclusion of Arab Israelis in Israel's blossoming tech culture. For some Palestinians with their high education levels, <a href="https://www.ft.com/content/51eaa386-0232-11e6-99cb-83242733f755" target="_blank">technology is a lifeline.</a></p>
     <p><em>I used: pencil and paper, Sketch App, InVision</em></p>
   </article>
   <div class="under-footer"></div>
