--- a/bagrut.html
+++ b/bagrut.html
@@ -6,24 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="imgs/zen.ico" type="image/x-icon">
   <link rel="stylesheet" href="./master.css">
-  <title>Lucy Sabin | Project</title>
+  <title>Lucy Sabin | Bagrut</title>
 </head>
 <body>
   <nav>
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">About</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>UX Research For An Advanced Grammar Revision App.</h1>
+    <h1>UX research for an advanced grammar revision app.</h1>
     <img src="./imgs/demographics.jpg" alt="" class="project-img">
-    <p>Te'udat Bagrut (Hebrew: תעודת בגרות‎) is the high school matriculation certificate in Israel. I researched how to approach building an advanced grammar app that would help students to revise for the exam in short bursts. This was a project in collaboration with Founders and Coders, Nazareth. Below is my first prototype, demonstrating layout:</p>
+    <h2>Client</h2>
+    <p>Israeli high school teachers and UK Israel Tech Hub (through Founders & Coders).</p>
+    <h2>Brief</h2>
+    <p>UX research into a revision app for high school students who wish to go to University.</p>
+    <h2>Description</h2>
+    <p>Te'udat Bagrut (Hebrew: תעודת בגרות‎) is the high school matriculation certificate in Israel. I researched how to approach building an advanced grammar app that would help students to revise for the exam in short bursts. This was a project in collaboration with Founders and Coders, Nazareth. Below is my first prototype, demonstrating layout. (Not pretty I know.)</p>
     <img src="./imgs/bagrut-prototype.png" alt="" class="project-img">
     <p>And <a href="https://github.com/lucyrose93/user-research-bagrut/blob/master/UX-initial-research.md" target="_blank">here</a> is my comprehensive UX research document on GitHub, with user profiling, market research, pedagogical analysis, basic prototyping, colour theory in the learning environment, and suggestions for font.</p>
   </article>
