--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option"><a href="./about.html">About</a></li>
-      <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-      <li class="nav-option">Contact</li>
+      <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+      <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+      <li class="nav-option current">CONTACT</li>
     </ul>
   </nav>
 
@@ -24,9 +24,9 @@
   <main role="main" class="main">
 
     <section class="contact" id="contact">
-      <h1>Let's Connect!</h1>
+      <img src="./imgs/lets-connect.png" alt="Let's connect" id="lets-connect">
       <p class="contact__para">
-        Please write me a message below with a brief outline of your project. Alternatively, email: lucy.rose.sabin(a)gmail.com</p>
+        I'd love to hear about your project. Please fill in the contact form below. Alternatively, send me an ol' fashioned email: lucy.rose.sabin(a)gmail.com</p>
       <form
         role="form"
         class="form"
