--- a/coot-freight.html
+++ b/coot-freight.html
@@ -13,18 +13,26 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">About</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>Coot Freight: Website & Copy.</h1>
+    <h1>Coot Freight: website & copy.</h1>
     <img src="imgs/coming-soon.gif" alt="coming soon gif" class="project-img">
-    <p>Coot Freight is a bespoke, international freight forwarding company. We are working together to re-design their website and freshen up the copy.</p>
-    <p>I have conducted preliminary user testing with their current website, and websites for other shipping companies. The discoveries I made about user behaviours in relation to the industry were integral to prototyping solutions. The finalised solution is currently in the pipeline...</p>
+    <h2>Client</h2>
+    <p>Coot Freight Ltd. is a bespoke, international freight forwarding company.</p>
+    <h2>Brief</h2>
+    <p>Redesign <a href="http://www.cootfreight.co.uk/" target="_blank">their website</a> and refresh the copy to reflect the businesses' identity.</p>
+    <h2>Deliverables</h2>
+    <p><a href="https://drive.google.com/file/d/0B956F1bFa1Yaa0tXNDRjSXhXTDdEemlGU3dJbUcwY1QtbE13/view?usp=sharing" target="_blank">UX report</a>, website wireframes and copy for all sections of the website.</p>
+    <h2>Process</h2>
+    <p>The UX report was composed of realising user personas, in-person testing of the current website and competitors' websites, and synthesising key insights.</p>
+    <p>We learned that users appreciate bold branding, no stock images, clear and concise information regarding shipping specs, and direct contact with industry experts.</p>
+    <p>Visuals are coming soon as the website is under construction.</p>
     <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop.</em></p>
   </article>
   <div class="under-footer"></div>
