--- a/hardware.html
+++ b/hardware.html
@@ -15,23 +15,33 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">About</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>Creating An Interactive LED Display For A Coding Bootcamp.</h1>
+    <h1>Productivity Tools: creating an interactive LED display for a coding bootcamp.</h1>
     <div class="img-panel">
       <img src="./imgs/hardware.png" alt="" class="project-img">
       <img src="./imgs/led-behind.png" alt="" class="project-img">
       <img src="./imgs/led-front.png" alt="" class="project-img">
     </div>
+    <h2>Client</h2>
+    <p>Founders and Coders (in house)</p>
+    <h2>Brief</h2>
+    <p>Develop an interactive LED display for the coding bootcamp learning space.</p>
+    <h2>Deliverables</h2>
+    <p>An LED display hooked up to a front end with productivity tools, such as pomodoro timers.</p>
+    <h2>Description</h2>
     <p>Along with a small team at Founders and Coders, I designed and helped to develop an interactive LED display that hooks up to a dedicated <a href="https://fac-productivity.herokuapp.com/" target="_blank">website</a> (see below).</p>
     <p>The Productivity Tools website has activity timers and randomised name selecting for use within the coding classroom.</p>
-    <p>Having the LED display helped to make Productivity Tools an interactive meeting point that encouraged collaborative working and healthy break times during busy days</p>.
+    <p>Having the LED display helped to make Productivity Tools an interactive meeting point that encouraged collaborative working and healthy break times during busy days.</p>
+    <h2>Feedback</h2>
+    <p>Students at Founders and Coders started using the display for timing presentations, selecting people to present their code, structuring exercises, and posting motivational (or funny) messages to the rest of the group.</p>
+    <p><em>"It helps to diffuse the intensity of the learning environment"</em>, said one coder.</p>
     <img src="./imgs/productivity-tools.png" alt="" class="project-img">
     <p><em>I used: pencil and paper, HTML5, CSS, JavaScript, matrix.js, Raspberry Pi, node.js, handlebars.js, and some trusty pliers!</em></p>
   </article>
