--- a/makatalk.html
+++ b/makatalk.html
@@ -15,24 +15,39 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">About</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>Overcoming Communication Barriers With Makaton Sign Language.</h1>
+    <h1>MakaTalk: overcoming communication barriers with Makaton sign language.</h1>
     <img src="./imgs/makatalk.png" alt="" class="project-img">
-    <p><a href="https://farrah1234.github.io/makatalk/index.html" target="_blank">MakaTalk</a> is an iPad web app developed to help young people with learning difficulties to express how they are feeling.</p>
-    </p>Our product owners are two clinicians who currently use paper forms to assess the emotional wellbeing of their patients before and after a therapy session.</p>
+    <h2>Client</h2>
+    <p>Brent Child and Family Clinic (NHS), with support from The Anna Freud Centre for Children and Families.</p>
+    <h2>Team</h2>
+    <p>Two designers/developers: Martha and I.</p>
+    <p>Two product owners: Sarah and Farrah from Brent Clinic.</p>
+    <h2>Brief</h2>
+    <p>Overcome communication barriers and improve overall progress tracking of therapy sessions for young persons with learning difficulties, by digitally optimising pre and post session surveys of patient condition.</p>
+    <h2>Deliverables</h2>
+    <p>A progessive web app (working prototype) for use on iPad devices before and after therapy sessions.</p>
+    <h2>Description/Process</h2>
+    </p>Our product owners were two clinicians who currently use paper forms to assess the emotional wellbeing of their patients before and after a therapy session.</p>
     <p> The problem is, for many of their young patients, a paper form is just too abstract, causing a communication barrier. In fact, often the parent or guardian will fill in the form on the young person's behalf, leading to inaccurate data.</p>
     <p>We wanted to transform these paper forms into a tactile, audiovisual experience that the young person could be immersed in. So we created two interactive surveys, using videos of Makaton sign language.</p>
+    <p>We had long, in depth disucssions with the clinicians and documented all of their frustrations. We also visited The Village School in Brent to speak with teachers about their experiences of communicating with pupils through Makaton. The Product Owners themselves also experimented with using Makaton with patients and provided us with insights.</p>
+    <p>We filmed a Makaton speaker asking the questions from the patient feedback forms. The footage was used to create an MVP that the clinicians could use to host a focus group. We now have a fully functional prototype.</p>
+    <h2>Outcomes</h2>
+    <p><a href="https://farrah1234.github.io/makatalk/index.html" target="_blank">MakaTalk</a> is an iPad web app developed to help young people with learning difficulties to express how they are feeling.</p>
     <img src="./imgs/makatalk-landing.png" alt="" class="project-img">
     <p>It was an interesting challenge to figure out how the user would select their answer. Our solution is to autoplay a Youtube playlist when the page loads, highlighting the options (image thumbnails) as each is enacted in Makaton. The available options/answers are at the bottom of the screen, so that the main video isn't covered up while they tap away on the tablet. In further iterations, we would like to add a progress bar and back/forward arrows.</p>
     <p>A/B testing in a therapy setting has shown that the young people prefer responding to a video interface over a paper form. So the clinicians can get a better idea of how they are feeling. That said, they would like to see "more exciting animations... like rockets". Good idea, we think!</p>
     <img src="./imgs/makatalk-options.png" alt="" class="project-img">
+    <h2>Feedback</h2>
+    <p><em>"Just wanted to say a HUGE thank you to you all for all the time, effort and enthusiasm you put into this project, including the extra time you put in, even after the allocated 4 weeks – it is VERY much appreciated – our service users will most definitely benefit from this app and we are eager to use it as part of our service."</em> Farrah, Assistant Psychologist at Brent Clinic.</p>
     <p><em>I used: pencil and paper, HTML5, CSS, JavaScript.</em></p>
   </article>
   <div class="under-footer"></div>
