--- a/stopmycraving.html
+++ b/stopmycraving.html
@@ -13,20 +13,27 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">About</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>StopMyCraving: User journeys, E-commerce Platform, Packaging, Branding.</h1>
+    <h1>StopMyCraving: UX design for an e-commerce food tech startup.</h1>
     <img src="./imgs/stopmycraving-box.png" alt="" class="project-img">
-    <p>Not yet live! StopMyCraving is a healthy snacks company, judged a UK Top 20 startup last year, with a place on Europe's Number 1 accelerator programme this year.</p>
-    <p>As their lead designer, I have been working with the team to develop user journeys, redesign the e-commerce platform, design new products, and align the confident brand identity with snazzy recyclable packaging (pictured above on a partner's online store).</p>
-    <p>I wish I could share the visuals with you now; fortunately it won't be long until the new e-commerce platform is up!</p>
-    <p><em>I'm using: pencil and paper for rapid prototyping, Sketch, Photoshop, Adobe Illustrator.</em></p>
+    <h2>Client</h2>
+    <p>StopMyCraving is a healthy snacks company, judged a UK Top 20 startup last year, with a place on Europe's Number 1 accelerator programme this year.</p>
+    <h2>Brief</h2>
+    <p>I have been working closely with the developer, CEO, and nutritionist to improve the user journey since October 2017.</p>
+    <h2>Deliverables</h2>
+    <p>Documented insights into customer behaviour, re-design of entire e-commerce platform (under construction), design of new "snack boxes" to suit user needs, and recyclable packaging with branding (pictured).</p>
+    <h2>Process</h2>
+    <p>StopMyCraving are growing rapidly. Each design phase is as efficient as possible. I conduct user testing with targeted groups to measure key variables that impact sales figures. Because of the business aims, a lot of my work has revolved around investigating customer behaviour when they are hungry or experiencing specific cravings.</p>
+    <h2>Outcomes</h2>
+    <p>Since I joined StopMyCraving in October as a freelancer, they have been accepted onto a major accelerator programme in Europe. The new products and packaging I've created are now retailing on Danish department store, Moodings.</p>
+    <p><em>I'm using: Skype (user interviews), pencil and paper for rapid prototyping, Sketch app, Sketch up (3D modelling), Photoshop, Illustrator, inVision, Zeplin.</em></p>
   </article>
   <div class="under-footer"></div>
   <footer>
