--- a/yoga.html
+++ b/yoga.html
@@ -13,24 +13,34 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">Information</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>Logos and Branding for my Yoga Business.</h1>
+    <h1>LucyRoseYoga: website and branding.</h1>
     <div class="img-panel">
-      <img src="./imgs/rainbowlogotextlarge.jpg" alt="" class="project-img">
-      <img src="./imgs/lucyroseyoga-tablet.png" alt="" class="project-img">
-      <img src="./imgs/LucyRoseYoga.png" alt="" class="project-img" id="yoga-logo">
+      <img src="./imgs/yoga-classes.png" alt="" class="project-img">
+      <img src="./imgs/yoga-about.png" alt="" class="project-img">
     </div>
+    <h2>Client</h2>
+    <p>LucyRoseYoga, my business as a yoga instructor.</p>
+    <h2>Brief</h2>
+    <p>Create a website and brand identity that resonates with my clients and my mission.</p>
+    <h2>Description</h2>
     <p>For <a href="http://www.lucyroseyoga.com/" target="_blank">my yoga website</a>, I gained a lot of useful feedback over social media. I'm pretty happy with the finished result; it took some investigating to achieve the right brand image.</p>
-    <p>The logo on the left was one of my shortlisted designs, but it didn't make the cut. Informal testing revealed that hippy yogis (like me) loved it, but people new to yoga found it strange. Some said that the complex shapes and colour scheme combined made it look mystic or esoteric.</p>
-    <p>Given that most of my clients are new-ish to yoga, I set out to design a logo that would appeal to them too (top right).</p>
-    <p>I opted for a fresher look that still uses a powerful geometric form: the vesica piscis. The colours are tranquil and evocative of nature, so the message is more down to earth and inviting.</p>
+    <div class="img-panel">
+    <img src="./imgs/rainbowlogotextlarge.jpg" alt="" class="project-img">
+    <img src="./imgs/LucyRoseYoga.png" alt="" class="project-img" id="yoga-logo">
+    </div>
+    <p>The first, more colourful logo was one of my shortlisted designs, but it didn't make the cut. Informal testing revealed that hippy yogis (like me) loved it, but people new to yoga found it strange. Some said that the complex shapes and colour scheme combined made it look mystic or esoteric.</p>
+    <p>Given that most of my clients are new-ish to yoga, I set out to design a logo that would appeal to them too (second logo pictured).</p>
+    <h2>Outcome</h2>
+    <p>As regards the logo, I opted for a fresher look that still uses a powerful geometric form: the vesica piscis. The colours are tranquil and evocative of nature, so the message is more down to earth and inviting. The logo encapsulates the brand identity, and this same aesthetic is mirrored across the website.</p>
+    <p>The benefit of being a designer is that I can continue to ask clients for feedback on their user journey of interacting with my brand, and use this information to iteratively improve the next user's experience.</p>
     <p><em>I used: pencil and paper, Photoshop, HTML5, CSS, JavaScript, Formspree.</em></p>
   </article>
   <div class="under-footer"></div>
