--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="fixed-nav">
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option"><a href="./about.html">About</a></li>
-      <li class="nav-option">Portfolio</li>
-      <li class="nav-option"><a href="./contact.html">Contact</a></li>
+      <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+      <li class="nav-option current">PORTFOLIO</li>
+      <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
     </ul>
   </nav>
 
   <div class="under-nav"></div>
 
   <section class="intro-text">
-    <p class="heading">Hello there!</p>
-    <p>Lucy here, a human-centred designer and maker, specialising in websites and apps.</p>
-    <p>If you'd like to discuss a project, feel free to <a href="./contact.html" class="contact__link">get&nbsp;in&nbsp;touch</a>. I'd love to chat over Skype or a coffee :)</p>
-    <p>Here is my portfolio by the way...</p>
+    <h1>Insightful design.</h1>
   </section>
 
 <article class="portfolio-wrapper" id="portfolio-section">
@@ -131,6 +128,16 @@
 </div>
 
   </article>
+
+  <div id="orgs">
+    <h1 id="orgs-heading">I've collaborated with...</h1>
+    <img src="./imgs/logos-anna.png" alt="Anna Freud Centre" class="partner-logo">
+    <img src="./imgs/logos-fac.png" alt="Founders & Coders logo" class="partner-logo">
+    <img src="./imgs/logos-nhs.png" alt="NHS NW London logo" class="partner-logo">
+    <img src="./imgs/logos-israel.png" alt="Brit Embassy and Israel Tech Hub" class="partner-logo">
+    <img src="./imgs/logos-uca.png" alt="University for Creative Arts" class="partner-logo">
+    <img src="./imgs/logos-stopmycraving.png" alt="stopmycraving logo" class="partner-logo">
+  </div>
 
   <div class="under-footer"></div>
 
