--- a/nourish.html
+++ b/nourish.html
@@ -13,29 +13,44 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">About</a></li>
-        <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-        <li class="nav-option"><a href="./contact.html">Contact</a></li>
+        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
   </nav>
   <div class="under-nav"></div>
   <article class="project-wrapper">
-    <h1>A Discreet "Food Diary" For Patients Recovering From Eating Disorders.</h1>
+    <h1>Nourish: a discreet "food diary" for patients recovering from eating disorders.</h1>
     <div class="img-panel">
       <img src="./imgs/nourish-logameal.png" alt="" class="project-img nourish-mobile">
       <img src="./imgs/nourish-calendar.png" alt="" class="project-img nourish-mobile">
       <img src="./imgs/nourish-modal.png" alt="" class="project-img nourish-mobile">
     </div>
-    <p>People who receive therapy for food-related mental health disorders are generally required to track their mood and eating habits. The A4 paper forms that are currently used for this are indiscreet and impractical for people on the go. Imagine having to fill out the form below Every. Single. Time. you eat or drink something!</p>
+    <h2>Client</h2>
+    <p>Anna Freud Centre for Children and Families</p>
+    <h2>Brief</h2>
+    <p>People who receive therapy for food-related mental health disorders are generally required to track their mood and eating habits. The A4 paper forms that are currently used for this are indiscreet and impractical for people on the go. Imagine having to fill out an A4 form (pictured below) Every. Single. Time. you eat or drink something!</p>
+    <p>Our product owner was a volunteer at Anna Freud who had been through the recovery process for Anorexia and Bulimia Nervosa. She wanted to revolutionise the paper diaries that patients are expected to fill out several times a day to overcome the issues she had encountered; she wanted to create a digital equivalent that saves time and effort.</p>
+    <h2>Team</h2>
+    <p>Three feisty females from Founders and Coders, plus a product owner from Anna Freud.</p>
+    <h2>Deliverable</h2>
+    <p>We had 5 days to create a working prototype for an app that records each meal experience.</p>
+    <h2>Description/Process</h2>
+    <p>We researched the frustrations of the current system, and even tried using it ourselves.</p>
+    <p>To make the meal-logging process more seamless, we used interactive elements to speed up the user's experience of logging a meal: the time of entry is autocompleted, they have the option to take a photo of their meal in place of writing a description, and there are sliding scales for inputting qualitative data, like evaluating mood. <a href="https://yvonne-liu.github.io/annafreud-app/logameal.html" target="_blank">Try it yourself</a>, if you like. Now compare Nourish with the form below!</p>
     <img src="./imgs/eating-cbt-form.jpg" alt="" class="project-img">
-    <p><a href="https://yvonne-liu.github.io/annafreud-app/landing.html" target="_blank">Nourish</a> is a prototype, built and designed by myself and two others during a five-day hackathon supported by the Anna Freud National Centre for Children and Families. It aims to replace paper "food diaries".</p>
-    <p>We used interactive elements to speed up the user's experience of logging a meal: the time of entry is autocompleted, they have the option to take a photo of their meal in place of writing a description, and there are sliding scales for inputting qualitative data, like evaluating mood. <a href="https://yvonne-liu.github.io/annafreud-app/logameal.html" target="_blank">Try it yourself</a>, if you like.</p>
-    <p>We also added a calendar interface, from which the user can access past diary entries, to show recovery progress over time. This was received well by clinicans and test users who trialled the product remotely, although the calendar needs some work to make it more intuitive to use.
-    </p>
+    <p>We also added a calendar interface, from which the user can access past diary entries, to show recovery progress over time.</p>
     <p>All importantly, there is the convenient option to send patient data to the therapist, so users are free to be paper-less.</p>
     <p>The aesthetic is calming and airy, influenced by the paintings of Nicholas Roreich (see below). We wanted to differentiate Nourish from other dietary apps, so that there is no hint of bodily objectification, but a gentle nudge to be mindful.</p>
     <img src="./imgs/roreich.jpg" alt="" class="project-img">
+    <h2>Outcomes</h2>
+    <p>Nourish was received well by clinicans and test users who trialled the product remotely, although user testing revealed that the calendar view should be more integrated with the food diary, to enhance usability.</p>
+    <h2>Feedback</h2>
+    <p><em>"Cool! Just logged my breakfast! Super awesome. I love this idea so much!"</em></p>
+    <p><em>"I found it to be very intuitive!"</em></p>
+    <p><em>"So some feedback based on the food logs we use at the treatment center I work @ - we also use for time type/amount (I love the photo idea-we have some clients take photos of their meals/snacks outside of program!) So all that aligns with what we track."</em></p>
+    <h2><a href="https://docs.google.com/presentation/d/184NdY4G9y50pQxbOUoEf70vm27c0xdp3qq1ASm_AW8I/edit?usp=sharing" target="_blank">See the pitch deck.</a></h2>
     <p><em>I used: pencil and paper, Photoshop, Illustrator, HTML5, CSS, JavaScript.</em></p>
   </article>
   <div class="under-footer"></div>
