--- a/publications.html
+++ b/publications.html
@@ -14,9 +14,9 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option"><a href="./about.html">About</a></li>
-      <li class="nav-option"><a href="./index.html">Portfolio</a></li>
-      <li class="nav-option"><a href="./contact.html">Contact</a></li>
+      <li class="nav-option"><a href="./about.html">ABOUT</a></li>
+      <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+      <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
     </ul>
   </nav>
   <div class="under-nav"></div>
