current nav bar highlight

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option">ABOUT</li>
+      <li class="nav-option current">ABOUT</li>
       <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
       <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
     </ul>
