scaling for mob

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="under-nav"></div>
 
   <section class="intro-text">
-    <h1>Insightful design.</h1>
+    <p>Hi there! I'm a freelance UX/UI designer, specialising in websites and web apps.</p>
   </section>
 
 <article class="portfolio-wrapper" id="portfolio-section">
@@ -130,7 +130,7 @@
   </article>
 
   <div id="orgs">
-    <h1 id="orgs-heading">I've collaborated with...</h1>
+    <h2 id="orgs-heading">I've collaborated with...</h1>
     <img src="./imgs/logos-anna.png" alt="Anna Freud Centre" class="partner-logo">
     <img src="./imgs/logos-fac.png" alt="Founders & Coders logo" class="partner-logo">
     <img src="./imgs/logos-nhs.png" alt="NHS NW London logo" class="partner-logo">
