remove first slogan

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </ul>
   </nav>
 
-  <div class="under-nav"></div>
+  <!-- <div class="under-nav"></div>
 
   <section class="intro-text">
     <h1>Insightful design.</h1>
-  </section>
+  </section> -->
 
 <article class="portfolio-wrapper" id="portfolio-section">
 
