change index to about

--- a/cv.html
+++ b/cv.html
@@ -14,8 +14,8 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option"><a href="./about.html">ABOUT</a></li>
-      <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+      <li class="nav-option"><a href="./index.html">ABOUT</a></li>
+      <li class="nav-option"><a href="./portfolio.html">PORTFOLIO</a></li>
       <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
     </ul>
   </nav>
