--- a/makatalk.html
+++ b/makatalk.html
@@ -15,8 +15,8 @@
     <ul>
       <ul>
         <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-        <li class="nav-option"><a href="./about.html">ABOUT</a></li>
-        <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+        <li class="nav-option"><a href="./index.html">ABOUT</a></li>
+        <li class="nav-option"><a href="./portfolio.html">PORTFOLIO</a></li>
         <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
       </ul>
     </ul>
@@ -41,7 +41,7 @@
     <p>We had long, in depth disucssions with the clinicians and documented all of their frustrations. We also visited The Village School in Brent to speak with teachers about their experiences of communicating with pupils through Makaton. The Product Owners themselves also experimented with using Makaton with patients and provided us with insights.</p>
     <p>We filmed a Makaton speaker asking the questions from the patient feedback forms. The footage was used to create an MVP that the clinicians could use to host a focus group. We now have a fully functional prototype.</p>
     <h2>Outcomes</h2>
-    <p><a href="https://farrah1234.github.io/makatalk/index.html" target="_blank">MakaTalk</a> is an iPad web app developed to help young people with learning difficulties to express how they are feeling.</p>
+    <p><a href="https://farrah1234.github.io/makatalk/portfolio.html" target="_blank">MakaTalk</a> is an iPad web app developed to help young people with learning difficulties to express how they are feeling.</p>
     <img src="./imgs/makatalk-landing.png" alt="" class="project-img">
     <p>It was an interesting challenge to figure out how the user would select their answer. Our solution is to autoplay a Youtube playlist when the page loads, highlighting the options (image thumbnails) as each is enacted in Makaton. The available options/answers are at the bottom of the screen, so that the main video isn't covered up while they tap away on the tablet. In further iterations, we would like to add a progress bar and back/forward arrows.</p>
     <p>A/B testing in a therapy setting has shown that the young people prefer responding to a video interface over a paper form. So the clinicians can get a better idea of how they are feeling. That said, they would like to see "more exciting animations... like rockets". Good idea, we think!</p>
