--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
   <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option"><a href="./about.html">ABOUT</a></li>
-      <li class="nav-option"><a href="./index.html">PORTFOLIO</a></li>
+      <li class="nav-option"><a href="./index.html">ABOUT</a></li>
+      <li class="nav-option"><a href="./portfolio.html">PORTFOLIO</a></li>
       <li class="nav-option current">CONTACT</li>
     </ul>
   </nav>
@@ -24,7 +24,7 @@
   <main role="main" class="main">
 
     <section class="contact" id="contact">
-      <img src="./imgs/lets-connect.png" alt="Let's connect" id="lets-connect">
+      <h1>Contact</h1>
       <p class="contact__para">
         I'd love to hear about your project. Please fill in the contact form below. Alternatively, send me an ol' fashioned email: lucy.rose.sabin(a)gmail.com</p>
       <form
@@ -64,7 +64,7 @@
         <button class="form__btn" type="submit">Submit</button>
 
         <!--customise formspree-->
-        <input type="hidden" name="_next" value="/index.html"/>
+        <input type="hidden" name="_next" value="/portfolio.html"/>
         <input type="hidden" name="_subject" value="Yoga website enquiry" />
         <input type="hidden" name="_format" value="plain" />
 
