--- a/index.html
+++ b/index.html
@@ -7,138 +7,74 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="imgs/zen.ico" type="image/x-icon">
   <link rel="stylesheet" href="master.css" type="text/css">
-  <title>Lucy Sabin | Portfolio</title>
+  <title>Lucy Sabin | About</title>
 </head>
 
 <body>
-  <nav class="fixed-nav">
+  <nav>
     <ul>
       <li><a href="./index.html"><img src="./imgs/Lucy-Sabin.png" alt="" id="lucy-sabin"></a></li>
-      <li class="nav-option"><a href="./about.html">ABOUT</a></li>
-      <li class="nav-option current">PORTFOLIO</li>
+      <li class="nav-option current">ABOUT</li>
+      <li class="nav-option"><a href="./portfolio.html">PORTFOLIO</a></li>
       <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
     </ul>
   </nav>
+  <div class="under-nav"></div>
+  <article class="about-wrapper">
+    <img src="./imgs/profile-drawing.gif" alt="" class="about-drawing" id="about-main-img">
 
-<article class="portfolio-wrapper" id="portfolio-section">
+    <section class="about-main-text">
+      <!-- <h1>I'm a designer and deep thinker.</h1>
+      <p class="heading">Driven to create meaningful experiences, I can code, research, draw, write, present, communicate and design.</p></br> -->
+      <h1>Hi there! Lucy here, a freelance UX/UI designer, specialising in websites and web apps.</h1>
+      <h2>My interpretation of User eXperience design is</h2>
+      <ul class="my-approach-list">
+        <h3><li>User-centred (of course).</li></h3>
+        <dl>Every stage in the design process is informed by the needs or wants of the customer/"user"/human who interacts with your product.</dl>
+        <h3><li>Empirical and agile.</li></h3>
+        <dl>I do not make assumptions about how the user sees or experiences the world; I hypothesise and I investigate. I strongly believe in the value of obtaining feedback and making observations via testing, then having the agility to incorporate learnings as efficiently and effectively
+          as possible, within the iterative design process.</dl>
+        <h3><li>Beautifully intuitive.</li></h3>
+        <dl>A self-taught coder and artist at heart, I am able to respond intelligently and sensitively to both technological and aesthetic requirements.</dl>
+        <h3><li>Holistic and empathetic.</li></h3>
+        <dl>I think about design in terms of crafting a dynamic experience, rather than a static thing, syncing with the user's lifestyle, thoughts, feelings, and sensations. My ultimate aim is to help create something that seamlessly resonates with their identity,
+          and the way they perceive or experience the world, perhaps sparking a moment of joy.</br>
+      </ul>
 
-  <div class="portfolio-cover">
-    <a href="./stopmycraving.html">
-      <div class="container-fade">
-        <img src="./imgs/stopmycraving-cover.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">StopMyCraving</br>(e-commerce & packaging)</div>
-        </div>
-      </div>
-    </a>
-  </div>
+      <img src="./imgs/ux-process.png" alt="my ux process" class="about-drawing">
 
-  <div class="portfolio-cover">
-    <a href="./gladwell.html">
-      <div class="container-fade">
-        <img src="./imgs/gladwell-cover.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Gladwell Massage</br>(website)</div>
-        </div>
-      </div>
-    </a>
-  </div>
+      <h2>My Story</h2>
 
-  <div class="portfolio-cover">
-    <a href="./coot-freight.html">
-      <div class="container-fade">
-        <img src="./imgs/coot-cover.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Coot Freight</br>(website & copy)</div>
-        </div>
-      </div>
-    </a>
-  </div>
+      <img src="./imgs/my-story.png" alt="" class="about-drawing">
 
-<div class="portfolio-cover">
-  <a href="./makatalk.html">
-    <div class="container-fade">
-      <img src="./imgs/makatalk-cover-mobile.png" alt="" class="portfolio-piece">
-      <div class="overlay">
-        <div class="text">MakaTalk</br>(iPad app)</div>
-      </div>
+      <p>Well-travelled and trilingual (FR, ES, ENG), I am a constant learner with a "can do" wilfulness. Alongside design, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach yoga in Hackney, on Thursdays and Sundays.</p></br>
+
+      <!--I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
+      <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.</p>-->
+
+      <!-- <p>I have always been particularly intrigued by colour, texture, and form. When I was younger, I dreamed of becoming a Textile Artist.</p>
+      <p>Lured by the intellectual challenges of the Humanities, however, I went on to study Modern Languages and Philosophy at Durham.</p>
+      <p>I started teaching myself to code in my student bedroom. I also reconnected with the art world by spending my third year abroad, studying Bellas Artes at the Universidad de Vigo in Spain.</p>
+      <p>Moving image culture became a real passion at university. My final year dissertation applied the philosophical theories of embodiment and extended cognition to recent Spanish horror film. In many respects, the filmmaker is like an interaction designer, who looks to involve the audience in a journey, by crafting an emotional, sensual experience.</p>
+      <p>Anyways, I guess you could say that a big part of me is drawn to exploring other cultures and questioning assumptions about human nature; this outlook continues to inform my open-minded approach as a designer.</p>
+      <p>Since graduating Durham, I have applied my "can do" attitude to digital media, honing my coding, communication, and graphics skills. I use an agile/lean methodology, inspired by the Founders and Coders bootcamp; I think developers enjoy having me on the team, because I can speak their language, and understand the implications of what I am asking them to build. I also build special relationships with Product Owners, because I care about helping to bring their dreams to lifestyle.</p>
+      <p>I'm so grateful to be able to fulfil my passion for user-centred design, balancing the creative and analytical sides of my personality. It's great to be able to share this passion with others, through writing and, lately, through workshops with design students. </p>
+      <p>I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p> -->
+
+    <div id="more">
+      <h2 id="h1-more">More?</h2>
+      <p>Bookmark <a href="./cv.html" target="_blank">CV</a>, follow on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
-  </a>
-</div>
 
-  <div class="portfolio-cover">
-    <a href="./arabin.html">
-      <div class="container-fade">
-        <img src="./imgs/arabin-cover-mobile.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Arab Innovators</br>(website)</div>
-        </div>
-      </div>
-    </a>
-  </div>
+        <div class="contact__button"><a href="./contact.html">Get in touch</a></div>
+        <a href="./about.html" class="back-top"><h3>Back to top</h3></a>
 
-  <div class="portfolio-cover">
-    <a href="./nourish.html">
-      <div class="container-fade">
-        <img src="./imgs/nourish-cover-mobile.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Nourish </br>(mobile app)</div>
-        </div>
-      </div>
-    </a>
-  </div>
-
-  <div class="portfolio-cover">
-    <a href="./hardware.html">
-      <div class="container-fade">
-        <img src="./imgs/hardware.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Classroom hardware</br>(LED display)</div>
-        </div>
-      </div>
-    </a>
-  </div>
-
-  <div class="portfolio-cover">
-    <a href="./bagrut.html">
-      <div class="container-fade">
-        <img src="./imgs/bagrut-cover-mobile.png" alt="" class="portfolio-piece">
-        <div class="overlay">
-          <div class="text">Language app </br>(UX research)</div>
-        </div>
-      </div>
-    </a>
-  </div>
-
-<div class="portfolio-cover">
-  <a href="./yoga.html">
-    <div class="container-fade">
-      <img src="./imgs/yoga-cover-mobile.png" alt="" class="portfolio-piece">
-      <div class="overlay">
-        <div class="text">LucyRoseYoga</br>(branding & website)</div>
-      </div>
-    </div>
-  </a>
-</div>
-
+    </section>
   </article>
-
-  <div id="orgs">
-    <h2 id="orgs-heading">I've collaborated with...</h1>
-    <img src="./imgs/logos-anna.png" alt="Anna Freud Centre" class="partner-logo">
-    <img src="./imgs/logos-fac.png" alt="Founders & Coders logo" class="partner-logo">
-    <img src="./imgs/logos-nhs.png" alt="NHS NW London logo" class="partner-logo">
-    <img src="./imgs/logos-israel.png" alt="Brit Embassy and Israel Tech Hub" class="partner-logo">
-    <img src="./imgs/logos-uca.png" alt="University for Creative Arts" class="partner-logo">
-    <img src="./imgs/logos-stopmycraving.png" alt="stopmycraving logo" class="partner-logo">
-  </div>
-
   <div class="under-footer"></div>
-
   <footer>
     <ul>
-      <li id="copyright">&copy Copyright 2017 L.S.</li>
-      <!-- <a href ="mailto:lucy.rose.sabin@gmail.com"><li class="footer-email">Email&nbsp;lucy.rose.sabin@gmail.com</li></a> -->
+      <li id="copyright">&copy; Copyright 2017 L.S.</li>
     </ul>
   </footer>
 </body>
