--- a/index.html
+++ b/index.html
@@ -19,35 +19,32 @@
       <li class="nav-option"><a href="./contact.html">CONTACT</a></li>
     </ul>
   </nav>
+
   <div class="under-nav"></div>
   <article class="about-wrapper">
-    <img src="./imgs/profile-drawing.gif" alt="" class="about-drawing" id="about-main-img">
-
+    <section id="landing">
+      <h1>Hi, I'm a freelance UX/UI designer, specialising in websites and web apps.</h1>
+    </section>
     <section class="about-main-text">
-      <!-- <h1>I'm a designer and deep thinker.</h1>
-      <p class="heading">Driven to create meaningful experiences, I can code, research, draw, write, present, communicate and design.</p></br> -->
-      <h1>Hi there! Lucy here, a freelance UX/UI designer, specialising in websites and web apps.</h1>
-      <h2>My interpretation of User eXperience design is</h2>
+      <h1>My approach is</h1>
       <ul class="my-approach-list">
-        <h3><li>User-centred (of course).</li></h3>
+        <h3><li>User-centred (of course)</li></h3>
         <dl>Every stage in the design process is informed by the needs or wants of the customer/"user"/human who interacts with your product.</dl>
-        <h3><li>Empirical and agile.</li></h3>
+        <h3><li>Empirical and agile</li></h3>
         <dl>I do not make assumptions about how the user sees or experiences the world; I hypothesise and I investigate. I strongly believe in the value of obtaining feedback and making observations via testing, then having the agility to incorporate learnings as efficiently and effectively
           as possible, within the iterative design process.</dl>
-        <h3><li>Beautifully intuitive.</li></h3>
+        <h3><li>Beautifully intuitive</li></h3>
         <dl>A self-taught coder and artist at heart, I am able to respond intelligently and sensitively to both technological and aesthetic requirements.</dl>
-        <h3><li>Holistic and empathetic.</li></h3>
+        <h3><li>Holistic and empathetic</li></h3>
         <dl>I think about design in terms of crafting a dynamic experience, rather than a static thing, syncing with the user's lifestyle, thoughts, feelings, and sensations. My ultimate aim is to help create something that seamlessly resonates with their identity,
           and the way they perceive or experience the world, perhaps sparking a moment of joy.</br>
-      </ul>
+      </ul></br>
 
+      <h1>The iterative design process</h1>
       <img src="./imgs/ux-process.png" alt="my ux process" class="about-drawing">
 
-      <h2>My Story</h2>
-
+      <h1>A little about me</h1>
       <img src="./imgs/my-story.png" alt="" class="about-drawing">
-
-      <p>Well-travelled and trilingual (FR, ES, ENG), I am a constant learner with a "can do" wilfulness. Alongside design, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach yoga in Hackney, on Thursdays and Sundays.</p></br>
 
       <!--I have lectured on Interaction and Interface Design at the University for the Creative Arts. I also teach hot yoga every Thursday and Sunday in Hackney!</p>
       <p>Passionate about: colour, texture, feminist film theory, tech for good, learning by doing, cultural studies, psychological and philosophical theories of embodiment.</p>-->
@@ -62,12 +59,13 @@
       <p>I still consider myself a philosopher and cultural theorist, except the objective of my research nowadays is to develop empathy and, ultimately, come up with a creative solution. Isn't that a wonderful thing?</p> -->
 
     <div id="more">
-      <h2 id="h1-more">More?</h2>
-      <p>Bookmark <a href="./cv.html" target="_blank">CV</a>, follow on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
+      <h1 id="h1-more">Still here? You flatter.</h1>
+        <p>Well-travelled and trilingual (FR, ES, ENG), I am an adventurous truth-seeker, fascinated by cross-cultural theories of human nature (particularly embodiment/extended cognition). Alongside design, I have lectured on Interaction and Interface Design at the University for Creative Arts. I also teach yoga in Hackney, on Thursdays and Sundays.</p>
+      <p>Feel free to bookmark my <a href="./cv.html" target="_blank">CV</a>, follow me on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add me on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, or skim <a href="./publications.html" target="_blank">my published writings.</a></p></br>
     </div>
 
-        <div class="contact__button"><a href="./contact.html">Get in touch</a></div>
-        <a href="./about.html" class="back-top"><h3>Back to top</h3></a>
+        <!-- <div class="contact__button"><a href="./contact.html">Get in touch</a></div> -->
+        <a href="./index.html" class="back-top"><h3>Back to top</h3></a>
 
     </section>
   </article>
