--- a/publications.html
+++ b/publications.html
@@ -83,16 +83,12 @@
       </ul>
     </br>
 
-  <div id="more">
-    <h2 id="h1-more">More?</h2>
-    <p>Bookmark <a href="./cv.html" target="_blank">CV</a>, follow on <a href="https://github.com/lucyrose93" target="_blank">GitHub</a>, add on <a href="https://www.linkedin.com/in/lucysabin/" target="_blank">LinkedIn</a>, skim <a href="./publications.html" target="_blank">my published writings.</a></p>
-  </div>
     </section>
   </article>
   <div class="under-footer"></div>
   <footer>
     <ul>
-      <li id="copyright">&copy Copyright 2017 L.S.</li>
+      <li id="copyright">&copy; Copyright 2017 L.S.</li>
     </ul>
   </footer>
 </body>
